# uav-ros

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  package.xml  premake5.lua
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/Preflight/: Preflight_node
devel/lib/pkgconfig/: Preflight.pc
devel/share/Preflight/cmake/: PreflightConfig.cmake
include/: pch.hpp
include/Preflight/: safety_check.hpp
include/core/: Application.hpp  Drone.hpp  EntryPoint.hpp  PX4.hpp  PX4Drone.hpp  State.hpp  Vector3.hpp
include/core/exceptions/: ArmFailed.hpp  ServiceCallFailed.hpp
include/waypoint_provider/: file_utility.hpp
launch/: sim.px4.launch
src/Preflight/: CMakeLists.txt  package.xml  safety_test.cpp
src/Preflight/include/: safety_check.hpp
src/Preflight/src/: preflight_check.cpp  safety_check.cpp
src/core/: Application.cpp  Drone.cpp  PX4.cpp  PX4Drone.cpp
src/newtakeoff/: NewTakeoffApp.cpp
src/test/: Test.cpp
src/waypoint_provider/: file_utility.cpp  waypoint_provider.cpp
waypoint_provider/: CMakeLists.txt  package.xml
waypoint_provider/src/: file_utility.cpp  waypoint_provider.cpp
world/: world
world/models/base/: model.config  model.sdf
world/models/pylon/: model.config  model.sdf
