<?xml version="1.0"?>
<package format="2">
	<name>uav_ros</name>
	<version>1.0.0</version>
	<description>UNL-UAV ROS Nodes</description>

	<maintainer email="aerospace-uav@unl.edu">UNL Aerospace</maintainer>
	<license>TODO</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>mavros</depend>
	<depend>mavros_msgs</depend>
	<depend>roslaunch</depend>
	<depend>px4</depend>
</package>	
